--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="./images/pic10.jpg" alt="" />
 									</span>
 								</section>
 
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Erat lacinia</h2>
+										<h2>Skill</h2>
 									</header>
 									<div class="features">
 										<article>
@@ -92,7 +92,7 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Ipsum sed dolor</h2>
+										<h2>Portfolio</h2>
 									</header>
 									<div class="posts">
 										<article>
