--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
+										<li><a href="elements.html">Curriculum Vitae</a></li>
 										<li>
 											<span class="opener">Submenu</span>
 											<ul>
@@ -214,7 +214,7 @@
 									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 									<ul class="contact">
 										<li class="fa-envelope-o"><a href="#">hyemin@gatech.edu</a></li>
-										<li class="fa-home">North Ave NW, Atlanta, <br />
+										<li class="fa-home">North Ave NW, Atlanta, <br>
 										GA 30332</li>
 									</ul>
 								</section>
