--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Curriculum Vitae</a></li>
+										<li><a href="resume.pdf">Curriculum Vitae</a></li>
 										<li>
 											<span class="opener">Submenu</span>
 											<ul>
