--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 									<header class="major">
 										<h2>Contact me</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+<!-- 									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p> -->
 									<ul class="contact">
 										<li class="fa-envelope-o"><a href="mailto:hyemin@gatech.edu">hyemin@gatech.edu</a></li>
 										<li class="fa-home">North Ave NW, Atlanta, <br>
