--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
 										<article>
 											<span class="icon fa-diamond"></span>
 											<div class="content">
-												<h3>Front end</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>Front-End</h3>
+												<p>HTML<br/>CSS<br/>Javascript<br/>SASS</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon fa-paper-plane"></span>
 											<div class="content">
-												<h3>Back end</h3>
+												<h3>Back-End</h3>
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											</div>
 										</article>
