--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 											<span class="icon fa-diamond"></span>
 											<div class="content">
 												<h3>Front-End</h3>
-												<p>HTML<br/>CSS<br/>Javascript<br/>SASS</p>
+												<p>HTML<br/>CSS<br/>Javascript<br/>Sass</p>
 											</div>
 										</article>
 										<article>
@@ -167,6 +167,7 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
+										<li><a href="testjs.html">Hammer</a></li>
 										<li><a href="generic.html">Generic</a></li>
 										<li><a href="resume.pdf">Curriculum Vitae</a></li>
 										<li>
