--- a/index.html
+++ b/index.html
@@ -673,7 +673,8 @@
   <script src="assets/js/jquery.magnific-popup.min.js"></script>
   <script src="http://a.vimeocdn.com/js/froogaloop2.min.js"></script>
   <script src="assets/js/jquery.fitvids.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDIbUJyc4VoZXDflmcWYPSgZGNxLECP5sk&callback=initMap"
+  type="text/javascript"></script>
   <script src="assets/js/scripts.js"></script>
 </body>
 </html>
