add ssf-muni picture

--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
 								<div class="portfolio">
 									<div class="tt-overlay"></div>
 									<div class="links">
-										<a class="image-link" href="assets/images/works/HCI.png"><i class="fa fa-search-plus"></i></a>
+										<a class="image-link" href="assets/images/works/muni.png"><i class="fa fa-search-plus"></i></a>
 										<a href="http://hyemin.me/sf-muni/"><i class="fa fa-link"></i></a>
 									</div><!-- /.links -->
 									<img src="assets/images/works/muni.png" alt="image">
