--- a/index.html
+++ b/index.html
@@ -434,10 +434,10 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 col-md-2">
-              <div class="chart" data-percent="80" data-color="3498db">
+              <div class="chart" data-percent="20" data-color="3498db">
                     <span class="percent"></span>
                     <div class="chart-text">
-                      <span>GIT</span>
+                      <span>React.js</span>
                     </div>
                 </div>
             </div>
